--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
           <div class="invitation-container">
             <div class="invitation-card">
               <img src="img/chu-re.jpg" alt="" />
-              <h3 class="card-title">BỮA CƠM THÂN MẬT TẠI NHÀ TRAI</h3>
+              <h3 class="card-title">BỮA CƠM TẠI NHÀ TRAI</h3>
               <address>
                 <p>Xóm Trà - Chợ chiều Thổ Tang</p>
                 <p>Thôn Bắc Cường TT Thổ Tang</p>
@@ -992,18 +992,35 @@
               </address>
               <div class="invitation-body">
                 <div class="invi_time">
-                  <p class="fw-bold">
+                  <!-- <p class="fw-bold">
                     Vào lúc
                     <span class="invi_hours"> 09:00 </span>
-                  </p>
+                  </p> -->
                   <div class="invi_group_time">
-                    <span class="invi_date_text"> Chủ nhật </span>
+                    <span class="invi_date_text"> Thứ bảy </span>
+                    <span class="invi_date_number">
+                      <p class="invi_date">08</p>
+                      /
+                      <p class="invi_month">03/2025</p>
+                    </span>
+                    <span class="invi_year_text"> 09:00 </span>
+                  </div>
+
+                  <p class="invi_amlich"></p>
+                </div>
+                <div class="invi_time">
+                  <!-- <p class="fw-bold">
+                    Vào lúc
+                    <span class="invi_hours"> 09:00 </span>
+                  </p> -->
+                  <div class="invi_group_time">
+                    <span class="invi_date_text"> Chủ nhật</span>
                     <span class="invi_date_number">
                       <p class="invi_date">09</p>
                       /
-                      <p class="invi_month">03</p>
+                      <p class="invi_month">03/2025</p>
                     </span>
-                    <span class="invi_year_text"> 2025 </span>
+                    <span class="invi_year_text"> 09:00 </span>
                   </div>
 
                   <p class="invi_amlich"></p>
@@ -1012,7 +1029,7 @@
             </div>
             <div class="invitation-card">
               <img src="img/co-dau.jpg" alt="" />
-              <h3 class="card-title">BỮA CƠM THÂN MẬT TẠI NHÀ GÁI</h3>
+              <h3 class="card-title">BỮA CƠM TẠI NHÀ GÁI</h3>
               <address>
                 <p>Xóm Cổng Sung</p>
                 <p>Thôn Bắc Cường - Thổ Tang</p>
@@ -1020,18 +1037,18 @@
               </address>
               <div class="invitation-body">
                 <div class="invi_time">
-                  <p class="fw-bold">
+                  <!-- <p class="fw-bold">
                     Vào lúc
                     <span class="invi_hours"> 09:00 </span>
-                  </p>
+                  </p> -->
                   <div class="invi_group_time">
-                    <span class="invi_date_text"> Chủ nhật </span>
+                    <span class="invi_date_text"> Chủ nhật</span>
                     <span class="invi_date_number">
                       <p class="invi_date">09</p>
                       /
-                      <p class="invi_month">03</p>
+                      <p class="invi_month">03/2025</p>
                     </span>
-                    <span class="invi_year_text"> 2025 </span>
+                    <span class="invi_year_text"> 09:00 </span>
                   </div>
 
                   <p class="invi_amlich"></p>
