--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
               </div>
             </div>
             <div class="invitation-card">
-              <img src="img/co-dau.jpg" alt="" />
+              <img src="img/co-dau2.jpg" alt="" />
               <h3 class="card-title">BỮA CƠM TẠI NHÀ GÁI</h3>
               <address>
                 <p>Xóm Cổng Sung</p>
