--- a/index.html
+++ b/index.html
@@ -1024,6 +1024,14 @@
                   </div>
 
                   <p class="invi_amlich"></p>
+                  <div class="social-link">
+                    <a href="https://www.google.com/maps/place/Ch%C6%A1%CC%A3+Chi%C3%AA%CC%80u+C%C3%B4%CC%89ng+Tra%CC%80/@21.256476,105.4900254,20.25z/data=!4m6!3m5!1s0x3134f3db5ecee6f5:0x8fcb7f04cdbb4fcc!8m2!3d21.2562884!4d105.4897941!16s%2Fg%2F11c5bl4l70?entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D" class="invi_map" target="_blank">
+                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"></path>
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.8 13.938h-.011a7 7 0 1 0-11.464.144h-.016l.14.171c.1.127.2.251.3.371L12 21l5.13-6.248c.194-.209.374-.429.54-.659l.13-.155Z"></path>
+                      </svg>
+                    </a> 
+                  </div>
                 </div>
               </div>
             </div>
@@ -1042,6 +1050,23 @@
                     <span class="invi_hours"> 09:00 </span>
                   </p> -->
                   <div class="invi_group_time">
+                    <span class="invi_date_text"> Thứ bảy </span>
+                    <span class="invi_date_number">
+                      <p class="invi_date">08</p>
+                      /
+                      <p class="invi_month">03/2025</p>
+                    </span>
+                    <span class="invi_year_text"> 09:00 </span>
+                  </div>
+
+                  <p class="invi_amlich"></p>
+                </div>
+                <div class="invi_time">
+                  <!-- <p class="fw-bold">
+                    Vào lúc
+                    <span class="invi_hours"> 09:00 </span>
+                  </p> -->
+                  <div class="invi_group_time">
                     <span class="invi_date_text"> Chủ nhật</span>
                     <span class="invi_date_number">
                       <p class="invi_date">09</p>
@@ -1052,6 +1077,14 @@
                   </div>
 
                   <p class="invi_amlich"></p>
+                  <div class="social-link">
+                    <a href="https://www.google.com/maps/place/Ch%C6%A1%CC%A3+Chi%C3%AA%CC%80u+C%C3%B4%CC%89ng+Tra%CC%80/@21.256476,105.4900254,20.25z/data=!4m6!3m5!1s0x3134f3db5ecee6f5:0x8fcb7f04cdbb4fcc!8m2!3d21.2562884!4d105.4897941!16s%2Fg%2F11c5bl4l70?entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D" class="invi_map" target="_blank">
+                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"></path>
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.8 13.938h-.011a7 7 0 1 0-11.464.144h-.016l.14.171c.1.127.2.251.3.371L12 21l5.13-6.248c.194-.209.374-.429.54-.659l.13-.155Z"></path>
+                      </svg>
+                    </a> 
+                  </div>
                 </div>
               </div>
             </div>
